[FIX] mass_mailing: remove overflow on mass mailing container
The overflow: auto on the container in mass mailing generated a
scrollbar whenever the drag and drop of snippets because
of the drop zones.

Task-2678999

--- a/addons/web_editor/static/src/scss/wysiwyg_iframe.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_iframe.scss
@@ -22,6 +22,7 @@ body.o_in_iframe {
 
     .note-editable {
         border: none;
+        overflow: visible;
     }
 
     #oe_snippets {
@@ -30,7 +31,6 @@ body.o_in_iframe {
 
     .iframe-editor-wrapper {
         flex: 1 1 auto;
-        overflow: auto;
     }
 
     .iframe-utils-zone {
